<resources>
    <string name="app_name">ListUsers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="erro_message">Ocorreu um erro ao baixar os dados. Clique aqui para tentar novamente</string>
    <string name="registrado_em">Registrado em:</string>
    <string name="e_mail">E-mail:</string>
    <string name="celular">Celular:</string>
    <string name="telefone">Telefone:</string>
    <string name="endere_o">Endereço:</string>
    <string name="idade">Idade:</string>
    <string name="sexo">Sexo:</string>
    <string name="nome">Nome:</string>
</resources>
